# physics-ai-surrogate-qualification

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
configs/: study_tier2_steady.toml
evidence_pack_tier2_steady/02_metrics/: current_envelope_physical_plausibility_by_case.csv  current_envelope_physical_plausibility_summary.json  physical_acquisition_physical_plausibility_by_case.csv  physical_acquisition_physical_plausibility_summary.json  physical_envelope_physical_plausibility_by_case.csv  physical_envelope_physical_plausibility_summary.json
evidence_pack_tier2_steady/03_data/: case_factory_manifest.csv  case_factory_summary.json  convergence_log.csv  convergence_log_schema.json  current_envelope_batch_status.json  (+77 more)
scripts/: 00_bootstrap_evidence_pack.py  01_generate_samples.py  02_create_openfoam_cases.py  03_run_openfoam_case_vm.py  04_run_openfoam_batch_vm.py  06_verify_pack.py  08_extract_fixed_grid_fields.py  09_train_field_operator.py  10_generate_fresh_ood_holdout.py  13_apply_regime_gate.py  14_generate_hard_regime_samples.py  18_validate_physical_plausibility.py  24_select_tier2_solver_validation.py  25_summarize_tier2_solver_validation.py  26_build_tier2_current_envelope.py  27_select_tier2_temperature_replacements.py  28_build_tier2_physical_envelope.py  29_select_tier2_physical_acquisition.py  30_generate_tier2_physical_backfill.py  31_finalize_tier2_physical_acquisition_manifest.py  32_tier2_gate_diagnostics.py  34_validate_pl_wp_002_public_chain.py
tests/: test_core_math.py
(+37 files in other folders)
