[build-system]
requires = ["setuptools>=81.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pl-wp-002-support"
version = "1.0.0"
description = "Solver-validated physics-AI surrogate qualification support workflow."
requires-python = ">=3.11"
dependencies = [
  "matplotlib==3.10.9",
  "scipy==1.17.1",
  "torch==2.12.0",
]

[tool.setuptools.packages.find]
where = ["src"]
